@@ -12,12 +12,18 @@ apport (0.45) UNRELEASED; urgency=low
     suite checks for the package error report workflow.
   * gtk/apport-gtk{,.glade}: GTK implementation of ui_present_package_error().
 
+  New feature: Maintain a per-binary blacklist to inhibit apport crash reports
+  until the binary changes. Closes: LP#79408
+
+  * apport/report.py: Add new Report methods check_ignored() and mark_ignore()
+    to check for/set ignore list entries. Add test cases.
+
   Bug fixes:
 
   * gtk/apport-gtk: Fix return code for restarting the application ('reopen' ->
     'restart'). Closes: LP#81422
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 25 Jan 2007 12:32:25 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 25 Jan 2007 14:54:47 +0100
 
 apport (0.44) feisty; urgency=low
 
